# Shared_Task_FlaskApp

./: .env.example  .gitignore  .rsyncignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
Flask/app/: app.py  demo.py  estimate.py  hoge.py  map.py
Flask/app/templates/: index.html  map.html
text2location/: app.py  estimate.py  map.py
text2location/static/: map.img
text2location/templates/: map.html  result.html  tmp.html
